# kindle_server

./: .gitignore  Cargo.toml  Code.gs  README.md  build.sh  build_cross.sh  test.html
.cargo/: config.toml
assets/: terminal.html
launch_server/: config.xml  menu.json
src/: main.rs  terminal.rs  todos.rs
