[package]
name = "kindle_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace","fs"] }
