[package]
name = "kindle_server"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.0.0"
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
mlua = { version = "0.10.3", features = ["lua51","serialize", "vendored"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace","fs"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.3.0"
